--- a/index6.html
+++ b/index6.html
@@ -1321,7 +1321,8 @@ footer.site-footer{
 
     <!-- Row 2: Join + Donate -->
     <div class="nav-actions">
-      <a class="btn btn-join" href="#">Join</a>
+      <a class="btn btn-join" href="#" data-key="join-nav">Join</a>
+
       <a class="btn btn-donate" href="#">Donate</a>
     </div>
 
