--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -3,53 +3,169 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Members — Dashboard</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<title>Swiss Aid — Member Dashboard</title>
+
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
 <style>
-:root{--brand:#0C2856;--accent:#F5C22D;--bg:#f8fafc}
-body{margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:#0f1724}
-.header{background:var(--brand);color:#fff;padding:14px 20px;display:flex;justify-content:space-between;align-items:center}
-.header a{color:#fff;text-decoration:none;font-weight:700}
-.container{max-width:1100px;margin:28px auto;padding:0 18px}
-.grid{display:grid;grid-template-columns:1fr 320px;gap:20px}
-.card{background:#fff;border-radius:12px;padding:18px;box-shadow:0 8px 20px rgba(2,6,23,0.06)}
-.actions a{display:inline-block;margin-right:8px;padding:8px 12px;border-radius:8px;text-decoration:none;background:#eef2ff;color:var(--brand);font-weight:600}
-.small{font-size:14px;color:#475569}
-@media(max-width:820px){.grid{grid-template-columns:1fr}}
+/* ===== BRAND SYSTEM ===== */
+:root {
+  --brand: #0C2856;
+  --accent: #F5C22D;
+  --bg: #f2f5f9;
+  --text: #0f172a;
+  --muted: #475569;
+  --card-bg: #ffffff;
+}
+
+/* ===== GLOBAL ===== */
+body {
+  margin: 0;
+  font-family: Inter, system-ui, sans-serif;
+  background: var(--bg);
+  color: var(--text);
+}
+
+/* ===== HEADER ===== */
+.header {
+  background: var(--brand);
+  padding: 12px 24px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-shadow: 0 3px 20px rgba(0,0,0,0.18);
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+}
+
+.header-left img {
+  height: 44px;
+}
+
+.header .nav-links a {
+  color: #fff;
+  margin-right: 16px;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 15px;
+}
+
+.header button {
+  background: var(--accent);
+  border: none;
+  padding: 8px 14px;
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+/* ===== LAYOUT ===== */
+.container {
+  max-width: 1200px;
+  margin: 32px auto;
+  padding: 0 20px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 320px;
+  gap: 24px;
+}
+
+@media(max-width: 900px) {
+  .grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* ===== CARDS ===== */
+.card {
+  background: var(--card-bg);
+  border-radius: 14px;
+  padding: 22px;
+  box-shadow: 0 4px 24px rgba(0,0,0,0.06);
+  margin-bottom: 20px;
+}
+
+.card h2, .card h3 {
+  margin: 0;
+  color: var(--brand);
+}
+
+.small {
+  font-size: 14px;
+  color: var(--muted);
+}
+
+/* ===== ACTION BUTTONS ===== */
+.actions a {
+  display: inline-block;
+  margin-right: 8px;
+  margin-top: 12px;
+  padding: 10px 15px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: 600;
+  background: #eef2ff;
+  color: var(--brand);
+  font-size: 14px;
+}
+
+/* Sidebar links */
+aside .small a {
+  text-decoration: none;
+  font-weight: 600;
+}
+
 </style>
 </head>
 <body>
 
+<!-- HEADER -->
 <header class="header">
-  <a href="/"><strong>Swiss Aid Foundation</strong></a>
-  <div>
-    <a href="profile.html" style="margin-right:10px;color:#fff">My Profile</a>
-    <a href="events.html" style="margin-right:10px;color:#fff">Events</a>
-    <a href="announcements.html" style="margin-right:14px;color:#fff">Announcements</a>
-    <button id="logoutBtn" style="background:var(--accent);border:none;padding:8px 12px;border-radius:8px;cursor:pointer">Logout</button>
+  <div class="header-left">
+    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="Swiss Aid Logo">
+    <div style="color:#fff; font-size:18px; font-weight:700;">Swiss Aid Foundation</div>
+  </div>
+
+  <div class="nav-links">
+    <a href="profile.html">My Profile</a>
+    <a href="events.html">Events</a>
+    <a href="announcements.html">Announcements</a>
+    <button id="logoutBtn">Logout</button>
   </div>
 </header>
 
+<!-- MAIN -->
 <main class="container">
   <div class="grid">
+
+    <!-- LEFT SIDE -->
     <div>
       <div class="card">
         <h2 id="welcome">Welcome</h2>
         <p class="small" id="memberSummary">Loading profile…</p>
 
-        <div style="margin-top:18px">
-          <a class="actions" href="profile.html">Edit Profile</a>
-          <a class="actions" href="events.html">View Events</a>
-          <a class="actions" href="announcements.html">Read Announcements</a>
+        <div class="actions">
+          <a href="profile.html">Edit Profile</a>
+          <a href="events.html">View Events</a>
+          <a href="announcements.html">Read Announcements</a>
         </div>
       </div>
 
-      <div class="card" style="margin-top:18px;">
-        <h3>Quick Activity</h3>
-        <div id="joinedEvents"><p class="small">Loading joined events…</p></div>
+      <div class="card">
+        <h3>My Event Activity</h3>
+        <div id="joinedEvents">
+          <p class="small">Loading joined events…</p>
+        </div>
       </div>
     </div>
 
+    <!-- RIGHT SIDE / SIDEBAR -->
     <aside>
       <div class="card">
         <h3>Account</h3>
@@ -57,22 +173,25 @@ body{margin:0;font-family:Inter,system-ui,Arial;background:var(--bg);color:#0f17
         <p class="small">Member ID: <span id="memberId">—</span></p>
       </div>
 
-      <div class="card" style="margin-top:16px;">
+      <div class="card">
         <h3>Useful Links</h3>
         <p class="small"><a href="/" style="color:var(--brand)">Home</a></p>
         <p class="small"><a href="/#joinPage" style="color:var(--brand)">Join / Login</a></p>
       </div>
     </aside>
+
   </div>
 </main>
 
-<!-- Firebase (v8 compat) -->
+
+<!-- ===================================================== -->
+<!-- FIREBASE -->
+<!-- ===================================================== -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 
 <script>
-/* ===== CONFIG – your provided config ===== */
 const firebaseConfig = {
   apiKey: "AIzaSyAQNayCzqw8NwIRaky4o21TPMXvL1ED5Mc",
   authDomain: "swissaid-1e9c9.firebaseapp.com",
@@ -86,39 +205,42 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db = firebase.database();
 
-/* ===== Auth guard ===== */
+/* ===== AUTH GUARD ===== */
 auth.onAuthStateChanged(async user => {
   if (!user) {
-    // not signed in → redirect to home join
     window.location.href = "/#joinPage";
     return;
   }
 
-  // show account info
   document.getElementById('accountEmail').textContent = user.email;
   document.getElementById('welcome').textContent = `Welcome, ${user.displayName || user.email}`;
 
-  // load profile from Realtime DB
-  const profileRef = db.ref('members/' + user.uid);
-  const snap = await profileRef.once('value');
-  const profile = snap.val() || {};
+  const profileSnap = await db.ref(`members/${user.uid}`).once('value');
+  const profile = profileSnap.val() || {};
 
   document.getElementById('memberSummary').textContent =
-    `${profile.fullName || '(name not set)'} · ${profile.country || '(country)'} · Joined: ${profile.joinedAt || '—'}`;
+    `${profile.fullName || '(no name)'} · ${profile.country || '(country not set)'} · Joined: ${profile.joinedAt || '—'}`;
   document.getElementById('memberId').textContent = user.uid;
 
-  // load joined events (simple)
-  const signups = await db.ref('eventSignups').orderByChild('uid').equalTo(user.uid).once('value');
-  const joined = signups.val() || {};
-  const list = Object.keys(joined).length ? Object.keys(joined).map(k => `<li>${joined[k].eventTitle || 'Event'}</li>`).join('') : '<li>No joined events</li>';
+  const joinedSnap = await db.ref('eventSignups')
+    .orderByChild('uid')
+    .equalTo(user.uid)
+    .once('value');
+
+  const joined = joinedSnap.val() || {};
+  const list = Object.keys(joined).length
+    ? Object.keys(joined).map(k => `<li>${joined[k].eventTitle}</li>`).join('')
+    : '<li>No joined events</li>';
+
   document.getElementById('joinedEvents').innerHTML = `<ul class="small">${list}</ul>`;
 });
 
-/* LOGOUT */
+/* ===== LOGOUT ===== */
 document.getElementById('logoutBtn').addEventListener('click', async () => {
   await auth.signOut();
   window.location.href = "/#joinPage";
 });
 </script>
+
 </body>
 </html>
