--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -129,7 +129,7 @@ aside .small a {
 <header class="header">
   <div class="header-left">
     <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="Swiss Aid Logo">
-    <div style="color:#fff; font-size:18px; font-weight:700;">Swiss Aid Foundation</div>
+    <div style="color:#fff; font-size:18px; font-weight:700;">Swiss Aid Connect Foundation</div>
   </div>
 
   <div class="nav-links">
