--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -3,58 +3,98 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Swiss Aid — Member Dashboard</title>
+<title>Swiss Aid — Dashboard</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
 <style>
-/* ===== BRAND SYSTEM ===== */
 :root {
   --brand: #0C2856;
   --accent: #F5C22D;
-  --bg: #f2f5f9;
+  --bg: #f3f5f9;
   --text: #0f172a;
   --muted: #475569;
-  --card-bg: #ffffff;
 }
 
-/* ===== GLOBAL ===== */
+/* GLOBAL */
 body {
   margin: 0;
   font-family: Inter, system-ui, sans-serif;
   background: var(--bg);
   color: var(--text);
+  display: flex;
+  min-height: 100vh;
 }
 
-/* ===== HEADER ===== */
-.header {
+/* SIDEBAR */
+.sidebar {
+  width: 260px;
   background: var(--brand);
-  padding: 12px 24px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  box-shadow: 0 3px 20px rgba(0,0,0,0.18);
-}
-
-.header-left {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-}
-
-.header-left img {
-  height: 44px;
-}
-
-.header .nav-links a {
   color: #fff;
-  margin-right: 16px;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 15px;
+  padding: 24px 20px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 3px 0 18px rgba(0,0,0,0.15);
+  position: sticky;
+  top: 0;
+  height: 100vh;
 }
 
-.header button {
+.sidebar img {
+  width: 65px;
+  margin-bottom: 10px;
+}
+
+.sidebar-title {
+  font-weight: 700;
+  font-size: 19px;
+  margin-bottom: 30px;
+}
+
+.nav-link {
+  color: #fff;
+  text-decoration: none;
+  padding: 12px 14px;
+  border-radius: 10px;
+  display: block;
+  margin-bottom: 6px;
+  font-weight: 500;
+  transition: 0.2s;
+}
+
+.nav-link:hover {
+  background: rgba(255,255,255,0.1);
+}
+
+.active {
+  background: rgba(255,255,255,0.18);
+}
+
+/* MAIN AREA */
+.main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+/* TOP BAR */
+.topbar {
+  background: #fff;
+  padding: 14px 24px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-bottom: 1px solid #e2e8f0;
+}
+
+.topbar a {
+  text-decoration: none;
+  color: var(--brand);
+  font-weight: 600;
+  margin-right: 16px;
+}
+
+.topbar button {
   background: var(--accent);
   border: none;
   padding: 8px 14px;
@@ -63,36 +103,21 @@ body {
   font-weight: 600;
 }
 
-/* ===== LAYOUT ===== */
-.container {
-  max-width: 1200px;
-  margin: 32px auto;
-  padding: 0 20px;
+/* CONTENT AREA */
+.content {
+  padding: 30px;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 320px;
-  gap: 24px;
-}
-
-@media(max-width: 900px) {
-  .grid {
-    grid-template-columns: 1fr;
-  }
-}
-
-/* ===== CARDS ===== */
 .card {
-  background: var(--card-bg);
-  border-radius: 14px;
+  background: #fff;
   padding: 22px;
+  border-radius: 14px;
+  margin-bottom: 30px;
   box-shadow: 0 4px 24px rgba(0,0,0,0.06);
-  margin-bottom: 20px;
 }
 
 .card h2, .card h3 {
-  margin: 0;
+  margin: 0 0 10px;
   color: var(--brand);
 }
 
@@ -101,7 +126,7 @@ body {
   color: var(--muted);
 }
 
-/* ===== ACTION BUTTONS ===== */
+/* Action buttons */
 .actions a {
   display: inline-block;
   margin-right: 8px;
@@ -112,81 +137,59 @@ body {
   font-weight: 600;
   background: #eef2ff;
   color: var(--brand);
-  font-size: 14px;
 }
-
-/* Sidebar links */
-aside .small a {
-  text-decoration: none;
-  font-weight: 600;
-}
-
 </style>
 </head>
 <body>
 
-<!-- HEADER -->
-<header class="header">
-  <div class="header-left">
-    <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png" alt="Swiss Aid Logo">
-    <div style="color:#fff; font-size:18px; font-weight:700;">Swiss Aid Connect Foundation</div>
-  </div>
+<!-- SIDEBAR -->
+<aside class="sidebar">
+  <img src="https://res.cloudinary.com/dwvt4e9o2/image/upload/v1763476964/Screenshot_73_e5hyu9.png">
 
-  <div class="nav-links">
-    <a href="profile.html">My Profile</a>
-    <a href="events.html">Events</a>
-    <a href="announcements.html">Announcements</a>
+  <div class="sidebar-title">Swiss Aid Connect</div>
+
+  <a class="nav-link active" href="dashboard.html">Dashboard</a>
+  <a class="nav-link" href="profile.html">My Profile</a>
+  <a class="nav-link" href="events.html">Events</a>
+  <a class="nav-link" href="announcements.html">Announcements</a>
+  <a class="nav-link" href="/">Website Home</a>
+</aside>
+
+<!-- MAIN AREA -->
+<div class="main">
+
+  <!-- TOP BAR -->
+  <header class="topbar">
+    <a href="profile.html">My Account</a>
     <button id="logoutBtn">Logout</button>
-  </div>
-</header>
+  </header>
 
-<!-- MAIN -->
-<main class="container">
-  <div class="grid">
+  <!-- CONTENT -->
+  <main class="content">
 
-    <!-- LEFT SIDE -->
-    <div>
-      <div class="card">
-        <h2 id="welcome">Welcome</h2>
-        <p class="small" id="memberSummary">Loading profile…</p>
+    <div class="card">
+      <h2 id="welcome">Welcome</h2>
+      <p class="small" id="memberSummary">Loading profile…</p>
 
-        <div class="actions">
-          <a href="profile.html">Edit Profile</a>
-          <a href="events.html">View Events</a>
-          <a href="announcements.html">Read Announcements</a>
-        </div>
-      </div>
-
-      <div class="card">
-        <h3>My Event Activity</h3>
-        <div id="joinedEvents">
-          <p class="small">Loading joined events…</p>
-        </div>
+      <div class="actions">
+        <a href="profile.html">Edit Profile</a>
+        <a href="events.html">View Events</a>
+        <a href="announcements.html">Read Announcements</a>
       </div>
     </div>
 
-    <!-- RIGHT SIDE / SIDEBAR -->
-    <aside>
-      <div class="card">
-        <h3>Account</h3>
-        <p><strong id="accountEmail">—</strong></p>
-        <p class="small">Member ID: <span id="memberId">—</span></p>
+    <div class="card">
+      <h3>My Event Activity</h3>
+      <div id="joinedEvents">
+        <p class="small">Loading joined events…</p>
       </div>
+    </div>
 
-      <div class="card">
-        <h3>Useful Links</h3>
-        <p class="small"><a href="/" style="color:var(--brand)">Home</a></p>
-        <p class="small"><a href="/#joinPage" style="color:var(--brand)">Join / Login</a></p>
-      </div>
-    </aside>
-
-  </div>
-</main>
+  </main>
+</div>
 
 
-<!-- ===================================================== -->
 <!-- FIREBASE -->
-<!-- ===================================================== -->
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
@@ -205,38 +208,31 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db = firebase.database();
 
-/* ===== AUTH GUARD ===== */
 auth.onAuthStateChanged(async user => {
   if (!user) {
     window.location.href = "/#joinPage";
     return;
   }
 
-  document.getElementById('accountEmail').textContent = user.email;
-  document.getElementById('welcome').textContent = `Welcome, ${user.displayName || user.email}`;
+  document.getElementById("welcome").textContent =
+    `Welcome, ${user.displayName || user.email}`;
 
-  const profileSnap = await db.ref(`members/${user.uid}`).once('value');
-  const profile = profileSnap.val() || {};
+  const snap = await db.ref("members/" + user.uid).once("value");
+  const profile = snap.val() || {};
 
-  document.getElementById('memberSummary').textContent =
-    `${profile.fullName || '(no name)'} · ${profile.country || '(country not set)'} · Joined: ${profile.joinedAt || '—'}`;
-  document.getElementById('memberId').textContent = user.uid;
+  document.getElementById("memberSummary").textContent =
+    `${profile.fullName || '—'} · ${profile.country || '—'} · Joined: ${profile.joinedAt || '—'}`;
 
-  const joinedSnap = await db.ref('eventSignups')
-    .orderByChild('uid')
-    .equalTo(user.uid)
-    .once('value');
+  const events = await db.ref("eventSignups").orderByChild("uid").equalTo(user.uid).once("value");
+  const list = events.val() || {};
+  const html = Object.keys(list).length
+    ? Object.keys(list).map(id => `<li>${list[id].eventTitle}</li>`).join("")
+    : "<li>No joined events</li>";
 
-  const joined = joinedSnap.val() || {};
-  const list = Object.keys(joined).length
-    ? Object.keys(joined).map(k => `<li>${joined[k].eventTitle}</li>`).join('')
-    : '<li>No joined events</li>';
-
-  document.getElementById('joinedEvents').innerHTML = `<ul class="small">${list}</ul>`;
+  document.getElementById("joinedEvents").innerHTML = `<ul class="small">${html}</ul>`;
 });
 
-/* ===== LOGOUT ===== */
-document.getElementById('logoutBtn').addEventListener('click', async () => {
+document.getElementById("logoutBtn").addEventListener("click", async () => {
   await auth.signOut();
   window.location.href = "/#joinPage";
 });
