--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -152,7 +152,8 @@ body {
   <a class="nav-link" href="profile.html">My Profile</a>
   <a class="nav-link" href="events.html">Events</a>
   <a class="nav-link" href="announcements.html">Announcements</a>
-  <a class="nav-link" href="/">Website Home</a>
+ <a href="../index.html" style="color:var(--brand)">Home</a>
+
 </aside>
 
 <!-- MAIN AREA -->
