--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -217,17 +217,17 @@ auth.onAuthStateChanged(async user => {
     return;
   }
 
-  document.getElementById("welcome").textContent =
-    `Welcome, ${user.displayName || user.email}`;
+document.getElementById("welcome").textContent =
+  `Welcome, ${user.displayName || user.email}`;
 
-  const snap = await db.ref("members/" + user.uid).once("value");
-  const profile = snap.val() || {};
+// Load profile
+const snap = await db.ref("members/" + user.uid).once("value");
+const profile = snap.val() || {};
 
-  document.getElementById("memberSummary").textContent =
-    `${profile.fullName || '—'} · ${profile.country || '—'} · Joined: ${profile.joinedAt || '—'}`;
+document.getElementById("memberSummary").textContent =
+  `${profile.fullName || '—'} · ${profile.country || '—'} · Joined: ${profile.joinedAt || '—'}`;
 
-
-
+// Load event signups for this user
 const eventsSnap = await db
   .ref("eventSignups")
   .orderByChild("uid")
@@ -245,8 +245,7 @@ if (Object.keys(events).length) {
       const e = events[id];
       return `
         <li>
-          <strong>${e.eventTitle || "Untitled Event"}</strong>
-          <br>
+          <strong>${e.eventTitle || "Untitled Event"}</strong><br>
           <span class="small">Joined: ${e.joinedAt || ""}</span>
         </li>
       `;
@@ -256,15 +255,15 @@ if (Object.keys(events).length) {
   html = "<li>No joined events yet</li>";
 }
 
+// Insert into page
 document.getElementById("joinedEvents").innerHTML = `<ul class="small">${html}</ul>`;
 
-
-
-  
+// Logout
 document.getElementById("logoutBtn").addEventListener("click", async () => {
   await auth.signOut();
   window.location.href = "/#joinPage";
 });
+
 </script>
 
 </body>
