--- a/index5.html
+++ b/index5.html
@@ -2595,7 +2595,7 @@ document.getElementById("googleBtn").addEventListener("click", async () => {
     await auth.signInWithPopup(googleProvider);
 
     // REDIRECT TO MEMBERS DASHBOARD
-    window.location.href = "/swissaid/members/dashboard.html";
+    window.location.href = "/swissaid/dashboard.html";
 
   } catch (err) {
     alert(err.message);
