--- a/members/dashboard.html
+++ b/members/dashboard.html
@@ -234,8 +234,8 @@ body {
    
     <a href="profile.html">My Account</a>
     <button id="logoutBtn">Logout</button>
-<div class="mobile-menu-btn" onclick="toggleMenu()">☰</div>
 
+  <div class="mobile-menu-btn" id="menuBtn">≡</div>
     
   </header>
 
